Fix page shifting bug and fix z-indexing of skill edit

--- a/src/MainPage/components/Contents/components/TreeContent/components/SkillTree/components/SkillNodeButton/components/NodeButton/NodeButton.css
+++ b/src/MainPage/components/Contents/components/TreeContent/components/SkillTree/components/SkillNodeButton/components/NodeButton/NodeButton.css
@@ -31,9 +31,7 @@
    * For scroll to display active button
    * Reference: StackOverflow: scrollIntoView Scrolls just too far | https://stackoverflow.com/questions/24665602/scrollintoview-scrolls-just-too-far
    */
-  scroll-margin: 100px calc((50vw - 200px)/2) 0px calc((50vw - 200px)/2);
-  scroll-snap-margin: 100px calc((50vw - 200px)/2) 0px calc((50vw - 200px)/2);
-  scroll-padding: 100px calc((50vw - 200px)/2) 0px calc((50vw - 200px)/2);
+  
 }
 
 .node_button > .button_listener {
